--- a/src/rules
+++ b/src/rules
@@ -1,52 +1,48 @@
-<Article/String/=/Tshirt>=<Usages/String/=/Casual>,<Position/String/=/Torso>,<Season/String/=/Summer>,<SleeveLength/String/=/Short>,<Material/String/=/Cotton>,
+<Article/String/=/Tshirt>=<Usages/String/=/Casual>,<Position/String/=/Torso>,<Season/String/=/Summer>,<SleeveLength/String/=/Short>,
 
-<Article/String/=/Pant>=<Usages/String/=/Casual>,<Position/String/=/Legs>,<Season/String/=/Winter>,<Temperature/Double/</28.0>,<Material/String/=/Jean>,<Length/String/=/Long>,
+<Article/String/=/Pant>=<Usages/String/=/Casual>,<Position/String/=/Legs>,<Season/String/=/Winter>,
 
-<Article/String/=/Short>=<Usages/String/=/Casual>,<Position/String/=/Legs>,<Season/String/=/Summer>,<Temperature/Double/>=/28.0>,<Material/String/=/Cotton>,<Length/String/=/Short>,
+<Article/String/=/Short>=<Usages/String/=/Casual>,<Position/String/=/Legs>,<Season/String/=/Summer>,
 
-<Article/String/=/Underwear>=<Usages/String/=/Protection>,<Position/String/=/Legs>,<Material/String/=/Cotton>,<Length/String/=/Short>,
+<Article/String/=/Boot>=<Usages/String/=/Casual>,<Position/String/=/Feet>,<Season/String/=/Winter>,<Gender/String/=/Female>,
 
-<Article/String/=/Boot>=<Usages/String/=/Casual>,<Position/String/=/Feet>,<Season/String/=/Winter>,<Gender/String/=/Female>,<Material/String/=/Suede>,<Length/String/=/Long>,
+<Article/String/=/Running>=<Usages/String/=/Sport>,<Position/String/=/Feet>,
 
-<Article/String/=/Running>=<Usages/String/=/Sport>,<Position/String/=/Feet>,<Material/String/=/Mesh>,<Length/String/=/Short>,
+<Article/String/=/Glove>=<Usages/String/=/Protection>,<Position/String/=/Hand>,<Season/String/=/Winter>,
 
-<Article/String/=/Glove>=<Usages/String/=/Protection>,<Usages/String/=/Accessory>,<Position/String/=/Hand>,<Material/String/=/Cotton>,<Length/String/=/Short>,<Season/String/=/Winter>,<Temperature/Double/<=/5.0>,
+<Article/String/=/Sweatshirt>=<Usages/String/=/Casual>,<Position/String/=/Torso>,<SleeveLength/String/=/Long>,<Season/String/=/Winter>,
 
-<Article/String/=/Sweatshirt>=<Usages/String/=/Casual>,<Usages/String/=/Protection>,<Position/String/=/Torso>,<Material/String/=/Cotton>,<SleeveLength/String/=/Long>,<Length/String/=/Long>,<Season/String/=/Winter>,<Temperature/Double/<=/17.0>,
+<Article/String/=/Pull>=<Usages/String/=/Casual>,<Position/String/=/Torso>,<SleeveLength/String/=/Long>,
 
-<Article/String/=/Pull>=<Usages/String/=/Casual>,<Position/String/=/Torso>,<Material/String/=/CottonVoile>,<SleeveLength/String/=/Long>,<Length/String/=/Long>,<Season/String/=/Winter>,<Temperature/Double/<=/21.0>,
+<Article/String/=/Jacket>=<Usages/String/=/Casual>,<Position/String/=/Torso>,<SleeveLength/String/=/Long>,<Season/String/=/Winter>,<Temperature/Double/<=/12.0>,
 
-<Article/String/=/Jacket>=<Usages/String/=/Casual>,<Usages/String/=/Protection>,<Position/String/=/Torso>,<Material/String/=/Fur>,<SleeveLength/String/=/Long>,<Length/String/=/Long>,<Season/String/=/Winter>,<Temperature/Double/<=/12.0>,
+<Article/String/=/Skirt>=<Usages/String/=/Casual>,<Gender/String/=/Female>,<Position/String/=/Legs>,<Temperature/Double/>=/20.0>,
 
-<Article/String/=/Skirt>=<Usages/String/=/Casual>,<Gender/String/=/Female>,<Position/String/=/Legs>,<Material/String/=/Cotton>,<Length/String/=/Medium>,<Season/String/=/Spring>,<Temperature/Double/>=/20.0>,
-
-<Article/String/=/Top>=<Usages/String/=/Casual>,<Gender/String/=/Female>,<Position/String/=/Torso>,<Material/String/=/CottonVoile>,<Length/String/=/Long>,<SleeveLength/String/=/Long>,<Season/String/=/Autumn>,<Temperature/Double/>=/18.0>,
+<Article/String/=/Top>=<Usages/String/=/Casual>,<Gender/String/=/Female>,<Position/String/=/Torso>,<Season/String/=/Autumn>,<Temperature/Double/>=/18.0>,
 
 <Article/String/=/Skirt>=<Usages/String/=/Casual>,<Usages/String/=/Party>,<Gender/String/=/Female>,<Position/String/=/Legs>,<Material/String/=/CottonVoile>,<Length/String/=/Long>,
 
-<Article/String/=/Watch>=<Usages/String/=/Casual>,<Usages/String/=/Accessory>,<Position/String/=/Wrist>,<Material/String/=/Metal>,<Size/String/=/Short>,<Season/String/=/Winter>,<Temperature/Double/<=/5.0>,
+<Article/String/=/Watch>=<Usages/String/=/Casual>,<Usages/String/=/Accessory>,<Position/String/=/Wrist>,<Material/String/=/Metal>,<Size/String/=/Short>,<Season/String/=/Winter>,
 
 <Article/String/=/Bag>=<Usages/String/=/Accessory>,<Position/String/=/Back>,<Material/String/=/Cotton>,<Size/String/=/Medium>,
 
 <Article/String/=/HandBag>=<Usages/String/=/Accessory>,<Gender/String/=/Female>,<Position/String/=/Hand>,<Material/String/=/Leather>,<Size/String/=/Medium>,
 
-<Article/String/=/Sock>=<Usages/String/=/Protection>,<Usages/String/=/Accessory>,<Position/String/=/Feet>,<Material/String/=/Cotton>,<Length/String/=/Medium>,<Season/String/=/Winter>,
+<Article/String/=/Sock>=<Usages/String/=/Protection>,<Position/String/=/Feet>,<Material/String/=/Cotton>,<Length/String/=/Medium>,<Season/String/=/Winter>,
 
 <Article/String/=/Ring>=<Usages/String/=/Accessory>,<Position/String/=/Finger>,<Material/String/=/Metal>,<Size/String/=/Small>,
 
-<Article/String/=/Scarf>=<Usages/String/=/Protection>,<Usages/String/=/Accessory>,<Position/String/=/Neck>,<Material/String/=/Cotton>,<Size/String/=/Medium>,<Length/String/=/Long>
+<Article/String/=/Scarf>=<Usages/String/=/Protection>,<Usages/String/=/Accessory>,<Position/String/=/Neck>,<Material/String/=/Cotton>,<Size/String/=/Medium>,<Length/String/=/Long>,
 
-<Article/String/=/Glasses>=<Usages/String/=/Protection>,<Usages/String/=/Accessory>,<Position/String/=/Head>,<Material/String/=/PLastic>,<Size/String/=/Small>,
+<Article/String/=/Glasses>=<Usages/String/=/Accessory>,<Position/String/=/Head>,
 
-<Article/String/=/Hat>=<Usages/String/=/Accessory>,<Position/String/=/Head>,<Material/String/=/Cotton>,<Size/String/=/Small>,
+<Article/String/=/Hat>=<Position/String/=/Head>,
 
 <Article/String/=/Cap>=<Usages/String/=/Accessory>,<Season/String/=/Summer>,<Position/String/=/Head>,<Material/String/=/Cotton>,<Size/String/=/Small>,
 
 <Article/String/=/Liquette>=<Usages/String/=/Casual>,<Gender/String/=/Female>,<Position/String/=/Torso>,<Material/String/=/CottonVoile>,<Size/String/=/Long>,
 
 <Article/String/=/Hijab>=<Usages/String/=/Accessory>,<Gender/String/=/Female>,<Position/String/=/Head>,<Material/String/=/CottonVoile>,<Size/String/=/Long>,
-
-<Article/String/=/Bra>=<Article/String/=/Underwear>,<Usages/String/=/Casual>,<Gender/String/=/Female>,<Position/String/=/Torso>,<Material/String/=/Cotton>,<Size/String/=/Medium>,
 
 <Quality/String/=/Low>=<Price/Double/<=/2000.0>,<Usages/String/=/Casual>,
 
@@ -61,3 +57,50 @@
 <Usages/String/=/Accessory>=<Size/String/=/Small>,<Position/String/=/Wrist>,
 
 <Usages/String/=/Accessory>=<Size/String/=/Small>,<Position/String/=/Hand>,
+
+<Season/String/=/Summer>=<Temperature/Double/>/25.0>,
+
+<Season/String/=/Autumn>=<Temperature/Double/</25.0>,<Temperature/Double/>/15.0>,
+
+<Season/String/=/Winter>=<Temperature/Double/</15.0>,
+
+<SleeveLength/String/=/Short>=<L/Double/</0.5>,
+
+<SleeveLength/String/=/Short>=<Season/String/=/Summer>,
+
+<SleeveLength/String/=/Long>=<L/Double/>/0.5>,
+
+<SleeveLength/String/=/Long>=<Season/String/=/Winter>,
+
+<Size/String/=/XS>=<Weight/Double/</56>,
+
+<Size/String/=/S>=<Weight/Double/</66>,<Weight/Double/>/55>,<Height/Double/</175>,
+
+<Size/String/=/M>=<Weight/Double/</66>,<Weight/Double/>/55>,<Height/Double/>/174>,
+
+<Size/String/=/M>=<Weight/Double/</75>,<Weight/Double/>/65>,<Height/Double/</175>,
+
+<Size/String/=/L>=<Weight/Double/</75>,<Weight/Double/>/65>,<Height/Double/>/174>,
+
+<Size/String/=/L>=<Weight/Double/</80>,<Weight/Double/>/74>,<Height/Double/</183>,
+
+<Size/String/=/L>=<Weight/Double/</85>,<Weight/Double/>/79>,<Height/Double/</183>,<Height/Double/>/167>,
+
+<Size/String/=/XL>=<Weight/Double/</80>,<Weight/Double/>/74>,<Height/Double/>/183>,
+
+<Size/String/=/XL>=<Weight/Double/</85>,<Weight/Double/>/79>,<Height/Double/</168>,
+
+<Size/String/=/XL>=<Weight/Double/</90>,<Weight/Double/>/84>,<Height/Double/</187>,<Height/Double/>/162>,
+
+<Size/String/=/XXL>=<Weight/Double/</90>,<Weight/Double/>/84>,<Height/Double/</156>,
+
+<Size/String/=/XXL>=<Weight/Double/</105>,<Weight/Double/>/90>,
+
+<Size/String/=/3XL>=<Weight/Double/</120>,<Weight/Double/>/104>,
+
+
+
+
+
+
+
